# shortcircuit

./: Cargo.toml  README.md  model.json  output.txt  package-lock.json  recursion.r1cs
src/: bin.rs  home_made_parser.rs
src/lib/parser/: ast.rs  compile.rs  expression_grammar.pest  expression_parser.rs  grammar.pest  mod.rs
src/lib/parser/errors/: include.rs  mod.rs  syntax.rs
src/lib/parser/matchers/: include_statement.rs
src/lib/parser/sample_circuits/: input.json  multiplier4.circom  recursion.circom  warships_raw.circom  warships_raw.r1cs  warships_raw_constraints.json  witness.wtns
src/lib/parser/sample_circuits/circomlib/circuits/: comparators.circom
src/lib/parser/sample_circuits/warships_raw_js/: warships_raw.wasm
src/small_parser/: lib.rs
src/visual/: logicCircuit.html
visual-debugger/: package-lock.json  package.json
visual-debugger/src/: App.css  App.js  NestedFlow.js  grammar.json
visual-debugger/src/components/: CodeEditor.js  CustomNode.js  Editor.js
